@@ -39,7 +39,7 @@ public class UrlVFS extends VFS
 	//{{{ UrlVFS constructor
 	public UrlVFS()
 	{
-		super("url", READ_CAP);
+		super("url", READ_CAP | NON_AWT_SESSION_CAP);
 	} //}}}
 
 	//{{{ constructPath() method
